<resources>
    <string name="app_name">Auction</string>

    <!-- Label -->
    <!-- Login/Sign up-->
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_sign_up">Create Account</string>
    <string name="link_login">Already a member? Login</string>
    <string name="link_sign_up">No account yet? Create one</string>

    <!-- Top -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_home">Home</string>
    <string name="nav_news">News</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_sold_listings">Sold listings</string>
    <string name="nav_purchased_listings">Purchased listings</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_guide">Guide</string>

    <string name="action_search">Search</string>
    <string name="action_notification">Notification</string>
    <string name="action_done">Done</string>

    <!-- Dialog messages -->
    <string name="dialog_loading">Loading...</string>

    <!-- error messages -->
    <string name="name_error">at least 3 characters</string>
    <string name="email_error">enter a valid email address</string>
    <string name="password_error">between 4 and 10 alphanumeric characters</string>
    <string name="login_failed">Login failed</string>
    <string name="sign_up_failed">Sign up failed</string>

    <string name="section_format">Hello World from section: %1$S</string>
</resources>
