<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search_top"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_notification_top"
        android:icon="@drawable/ic_notifications_none"
        android:orderInCategory="101"
        android:title="@string/action_notification"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_done_top"
        android:icon="@drawable/ic_done"
        android:orderInCategory="102"
        android:title="@string/action_done"
        app:showAsAction="always" />
</menu>